--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.4",
     "next-themes": "^0.2.1",
     "notion-client": "^6.16.0",
+    "notion-types": "^6.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
